--- a/integrity/singleThread/html/login.html
+++ b/integrity/singleThread/html/login.html
@@ -5,15 +5,8 @@
 <![endif]-->
 <html lang="en">
 <head>
-    <title>Sarin | SignUp</title>
+    <title></title>
     <meta charset="UTF-8">
-<meta property="og:type" content="website">
-<link rel="icon" type="image/png" href="https://sarin.io:9999/icon" />
-<meta property="og:description" content="Sarin.io, Data-Mining: We deliver Business Intelligence at the enterprise level. prevent data leakage, and weak end-points." >
-<meta name="keywords" content="information security ,information technology, data mining, business intelligence, internet of things, iot, penetretion testing, vulnerability testing, data leakage, Identity validation">
-<meta property="og:url" content="https://sarin.io">
-<meta property="og:locale" content="en_US">
-<meta property="og:site_name" content="Sarin.io">
 </meta>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script>
@@ -158,12 +151,6 @@ body {
     <p style="font-size:45;color:white;"> you dont have an account?</p>
     <p style="font-size:45;color:#FF8C00;" onclick="Yi()">SignUp</p>
 </form>
-<p>&nbsp;</p>
-<p style="color:white; font-size: 16px;">Sarin.io</p>
-<p style="color:white; font-size: 16px;">&nbsp; ©<p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
 </div>
 </div>
 </body>
