--- a/integrity/singleThread/html/signup.html
+++ b/integrity/singleThread/html/signup.html
@@ -5,15 +5,8 @@
 <![endif]-->
 <html lang="en">
 <head>
-    <title>Sarin | SignUp</title>
+    <title> SignUp </title>
     <meta charset="UTF-8">
-<meta property="og:type" content="website">
-<link rel="icon" type="image/png" href="https://sarin.io:9999/icon" />
-<meta property="og:description" content="Sarin.io, Data-Mining: We deliver Business Intelligence at the enterprise level. prevent data leakage, and weak end-points." >
-<meta name="keywords" content="information security ,information technology, data mining, business intelligence, internet of things, iot, penetretion testing, vulnerability testing, data leakage, Identity validation">
-<meta property="og:url" content="https://sarin.io">
-<meta property="og:locale" content="en_US">
-<meta property="og:site_name" content="Sarin.io">
 </meta>
 <title> Sign Up </title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -121,7 +114,6 @@ body{
     <span class="help-inline">Required</span>
 <br>
 <br>
-   <p>By clicking on the "Create Account" button below,</p><p> you understand and agree that the use of Sarin's web</p><p> site is subject to the Sarin.io Terms of Use and Sarin's Privacy Policy,</p><p> including the fact that Sarin may transfer your personal information collected</p><p> in connection with your registration on this website</p><p> to its affiliates globally and to third party entities that provide services to Sarin.</p>
     <input type="submit" id="button" value="Create Account">
   </fieldset>
 </form>
