--- a/integrity/singleThread/html/yes.html
+++ b/integrity/singleThread/html/yes.html
@@ -14,7 +14,7 @@ $(document).ready(function(){
 <script>
 $(document).ready(function () {
     window.setTimeout(function () {
-        location.href = "http://sarin.io:8007/validation";
+        location.href = "http://127.0.0.1:8007/validation";
     }, 100000);
 });
 </script>
